Revision history for Perl-Critic-MergeProfile

{{$NEXT}}

0.003  2018-07-05 20:46:50 UTC

  - Updated documentation

0.002  2018-07-04 22:06:18 UTC

  - Updated documentation

0.001  2018-07-03 21:57:51 UTC

  - Initial release