@@ -42,7 +42,7 @@
             "Test::Fatal" : "0",
             "Test::MockModule" : "0",
             "Test::More" : "0.88",
-            "Test::TempDir::Tiny" : "0.017",
+            "Test::TempDir::Tiny" : "0",
             "lib" : "0",
             "perl" : "5.006"
          }
