@@ -27,7 +27,7 @@ my %WriteMakefileArgs = (
     "Test::Fatal" => 0,
     "Test::MockModule" => 0,
     "Test::More" => "0.88",
-    "Test::TempDir::Tiny" => "0.017",
+    "Test::TempDir::Tiny" => 0,
     "lib" => 0
   },
   "VERSION" => "0.003",
@@ -44,7 +44,7 @@ my %FallbackPrereqs = (
   "Test::Fatal" => 0,
   "Test::MockModule" => 0,
   "Test::More" => "0.88",
-  "Test::TempDir::Tiny" => "0.017",
+  "Test::TempDir::Tiny" => 0,
   "lib" => 0,
   "strict" => 0,
   "warnings" => 0
