@@ -1,4 +1,4 @@
 [ControlStructures::ProhibitPostfixControls]
 flowcontrol = Carp::croak
+
 [-Subroutines::ProhibitBuiltinHomonyms]
-[-Subroutines::RequireArgUnpacking]
