@@ -2,6 +2,8 @@ Revision history for Perl-Critic-MergeProfile
 
 {{$NEXT}}
 
+  - Removed minimal dependency on Test::TempDir::Tiny 0.017
+
 0.003  2018-07-05 20:46:50 UTC
 
   - Updated documentation
